Edited application/assets/css/privacy.css via GitHub

--- a/application/assets/css/privacy.css
+++ b/application/assets/css/privacy.css
@@ -112,10 +112,10 @@ h2 {
 
 
 .main{
-    width: 450px;
+    width: 760px;
     height:100%;
     margin: auto;
     background: #c3c3e8;
-    float: right;
+    float: center;
 }
 
