--- a/application/assets/css/privacy.css
+++ b/application/assets/css/privacy.css
@@ -113,9 +113,9 @@ h2 {
 
 #main{
     width: 760px;
-    height:100%;
+    height:80%;
     margin: auto;
-    background: #c3c3e8;
+    background: #dbdbdb;
     float: center;
 }
 
