--- a/application/assets/css/login.css
+++ b/application/assets/css/login.css
@@ -94,8 +94,8 @@ h1 {
 
 #leftside{
     position:relative;
-    width:260px;
-    height:1000px;
+    width:400px;
+    height:400px;
     padding-top:30px;
     float:left;
     
@@ -104,7 +104,9 @@ h1 {
 
 #left_title{
     position:relative;
+    height: 50px;
     background-color: #0e4;
+    margin-top: 0px;
 }
 
 #left_video{
