--- a/application/assets/css/login.css
+++ b/application/assets/css/login.css
@@ -128,7 +128,18 @@ h5 {
     width:600px;
     height:400px;
     float:left;
-    background-color: #ddd;
+
+    -webkit-border-top-left-radius: 10px;
+    -moz-border-radius-top-left: 10px;
+    border-top-left-radius: 10px;
+    -webkit-border-bottom-left-radius: 10px;
+    -moz-border-radius-bottom-left: 10px;
+    border-bottom-left-radius: 10px;
+
+    /*--CSS3 Box Shadows--*/
+    -webkit-box-shadow: 0px 2px 8px #aaa;
+    -moz-box-shadow: 0px 2px 8px #aaa;
+    box-shadow: 0px 2px 8px #aaa;  
 }
 
 #left_title{
