Edited application/assets/css/login.css via GitHub

--- a/application/assets/css/login.css
+++ b/application/assets/css/login.css
@@ -71,8 +71,32 @@ h5 {
      background-image: -webkit-gradient(linear,left bottom,left top,color-stop(0, rgb(223,223,224)),color-stop(1, rgb(237,238,239)));
      background-image: -moz-linear-gradient(center bottom,rgb(223,223,224) 0%,rgb(237,238,239) 100%);
      background-image: -o-linear-gradient(top,rgb(237,238,239),rgb(223,223,224));
+
+
+        /* -------------- Font -----------------------*/
+        font-family: 'Ubuntu', Helvetica, Arial, sans-serif;
+	font-size: 15px;
+	line-height: 30px;
+
+    color: #454545;  
+    text-shadow: 0 1px 0 white;
+}
+
+h6 {  
+     padding: 5px 20px;  
+     margin-left: -20px;  
+     margin-top: 5px;  
+     position: relative;  
+     width: 80%;
+
+     -moz-border-radius: 5px 5px 5px 0px;
+     border-radius: 5px 5px 5px 0px;
   
- 
+     background-image: -webkit-gradient(linear,left bottom,left top,color-stop(0, rgb(223,223,224)),color-stop(1, rgb(237,238,239)));
+     background-image: -moz-linear-gradient(center bottom,rgb(223,223,224) 0%,rgb(237,238,239) 100%);
+     background-image: -o-linear-gradient(top,rgb(237,238,239),rgb(223,223,224));
+
+
         /* -------------- Font -----------------------*/
         font-family: 'Ubuntu', Helvetica, Arial, sans-serif;
 	font-size: 15px;
