--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -248,7 +248,7 @@ a{
 }
 
 .day.day_selected {
-    background:-webkit-gradient(linear,left top,left bottom,from(lightYellow),to(lightgray));
+    background:-webkit-gradient(linear,left top,left bottom,from(#EEE),to(#AAA));
     color: gray;
 }
 
