--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -68,7 +68,7 @@ a{
     padding-top:10px;
     border:1px solid lightgray;
     border-right:none;
-    
+
     /* ------ border ----- */
     -webkit-border-top-left-radius: 10px;
     -moz-border-radius-top-left: 10px;
@@ -386,7 +386,7 @@ a{
     padding-top:10px;
     border:1px solid lightgray;
     border-left:none;
-    
+
     /* ------ border ----- */
     -webkit-border-top-right-radius: 10px;
     -moz-border-radius-top-right: 10px;
@@ -534,3 +534,10 @@ a{
     color:gray;
 }
 
+.make_plan {
+    position: absolute;
+    left: 0px;
+    bottom: 0px;
+    border: 1px solid lightgray;
+    background: -webkit-gradient(linear,left top,left bottom,from(purple),to(#AF64DE));
+}
