--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -306,10 +306,9 @@ a{
 
 /*------- CSS FOR BOTTOM SELECTABLE LOCATIONS------------ */
 .display_message{
-    background:-webkit-gradient(linear,left top,left bottom,from(#F3F6FF),to(white));
-    padding-top:10px;
-    padding-bottom:10px;
+    background:-webkit-gradient(linear,left top,left bottom,from(#F3F6FF),to(white)); 
     border-bottom:1px solid lightgray;
+    padding:10px;
 }
 
 .no_places_to_show{
