--- a/application/assets/css/location_data.css
+++ b/application/assets/css/location_data.css
@@ -65,3 +65,10 @@
     right:0px;
     bottom:-20px;
 }
+
+.gender_breakdown{
+    position:relative;
+    top:10px;
+    height:80px;
+    width:245px;
+}
