--- a/application/assets/css/dashboard.css
+++ b/application/assets/css/dashboard.css
@@ -213,6 +213,7 @@ a{
     padding-top:10px;
     padding-bottom:10px;
     margin-bottom:-7px;
+    font-size:16px;
 }
 .left_header{
     height: 50px; 
