--- a/application/assets/css/add_location_modal.css
+++ b/application/assets/css/add_location_modal.css
@@ -3,3 +3,15 @@
     margin-left: -250px;
     margin-top: -150px;
 }
+
+#add_location_modal .left, #add_location_modal .right {
+    float: left;
+    width: 50%;
+    position: relative;
+    border: 1px solid black;
+}
+
+#new_location_map {
+    width: 100%;
+    height: 200px;
+}
