--- a/application/assets/css/add_location_modal.css
+++ b/application/assets/css/add_location_modal.css
@@ -6,16 +6,17 @@
 
 #add_location_modal .left {
     float: left;
-    width: 50%;
+    width: 49%;
     position: relative;
     border: 1px solid black;
 }
 
 #add_location_modal .right {
     float: left;
-    width: 50%;
+    width: 49%;
     position: relative;
     border: 1px solid black;
+    margin-left: 5px;
 }
 
 #new_location_map {
