--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -528,9 +528,10 @@ a{
     position:absolute;
     top:-46px;
     right:70px;
-    background:-webkit-gradient(linear,left top,left bottom,from(lightYellow),to(lightgray));
+    background:-webkit-gradient(linear,left top,left bottom,from(#AF64DE),to(purple));
+    border:1px solid lightgray;
     padding:9px;
-    color:gray;
+    color:white;
 }
 
 .make_plan {
