--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -416,7 +416,7 @@ a{
     height:auto;
     margin:auto;
     border: 1px solid lightgray;
-    color: black;
+    color: #4E4E4E;
     padding-top:5px;    
     padding-bottom: 5px;
     background:-webkit-gradient(linear,left top,left bottom,from(#F3F6FF),to(#EEE));
