--- a/application/assets/css/add_location_modal.css
+++ b/application/assets/css/add_location_modal.css
@@ -20,8 +20,7 @@
 }
 
 #new_location_map {
-    width: 300px;
+    width: 100%;
     height: 300px;
     margin-top: 50px;
-    border: 1px solid black;
 }
