--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -1,6 +1,6 @@
 /*--------------GLOBAL ---------------- */
 body{
-    background-color: #F3F3F3;
+    background:-webkit-gradient(linear,left top,left bottom,from(#ECECEC),to(white));
     /* make text not selectable for the UI */
     /*-webkit-user-select: none;
     cursor:default; */
