--- a/application/assets/css/dashboard.css
+++ b/application/assets/css/dashboard.css
@@ -1,6 +1,6 @@
 /* ---------- GLOBAL ------------*/
 body{
-    background:-webkit-gradient(linear,left top,left bottom,from(#ECECEC),to(white));
+    background-color:#F3F3F3;
     margin: 0px;
     font-family: helvetica;
     font-size: 15px;
