--- a/application/assets/css/add_location_modal.css
+++ b/application/assets/css/add_location_modal.css
@@ -17,8 +17,14 @@
     margin-left: 5px;
 }
 
+#add_location_modal .in-field_block {
+    margin-left: auto;
+    margin-right: auto;
+}
+
 #new_location_map {
     width: 100%;
     height: 300px;
-    margin-top: 50px;
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
