Edited application/assets/css/about.css via GitHub

--- a/application/assets/css/about.css
+++ b/application/assets/css/about.css
@@ -149,7 +149,7 @@ h4 {
     width: 450px;
     height:100%;
     margin: auto;
-    background: #c3c3e8;
+    padding: 5px;
     float: right;
 }
 
