--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -419,6 +419,14 @@ a{
     min-height:200px;
 }
 
+.friend_list{
+    
+}
+
+.friend_tab{
+    
+}
+
 /* ------------------- PLAN CONTENT -------------- */
 .plans_wrapper{
     text-align: center;
