--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -417,7 +417,7 @@ a{
 }   
 
 #friends_plans_panel{
-    width:auto;
+    width:210px;
     height:auto;
 }
 
@@ -429,11 +429,14 @@ a{
     background:-webkit-gradient(linear,left top,left bottom,from(#F3F6FF),to(#EEE));
     border:1px solid lightgray;
     height:100%;
-    padding: 5px 0px 5px;
+    width:100%;
+    padding-top:5px;
+    padding-bottom:5px;
+    
     color: #727272;
     text-align:center;
     margin-bottom: 10px;
-    width:95%;
+    width:auto;
     margin-left:5px;
 }
 
