--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -440,6 +440,10 @@ a{
     margin-left:5px;
 }
 
+.friend_modal_content{
+    
+}
+
 /* ------------------- PLAN CONTENT -------------- */
 .plans_wrapper{
     text-align: center;
