--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -409,7 +409,7 @@ a{
 
 /*---------- FRIENDS PLANS MODAL ----------- */
 .view_friends_plans{
-    color:lightblue;
+    color:#57A8E2;
     font-weight:bold;
     width:133px;
     margin-right:auto;
