--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -424,9 +424,11 @@ a{
 .friend_list{
     
 }
+/*
 .friend_plan_content{
     text-align: center;
 }
+*/
 
 .friend_tab{
     background:-webkit-gradient(linear,left top,left bottom,from(#F3F6FF),to(#EEE));
