--- a/application/assets/css/graphs.css
+++ b/application/assets/css/graphs.css
@@ -1,6 +1,6 @@
 /* ----------------------------------------- percent classes ----------------------------- */
 .percent_bar_total {
-    background-color: navy;
+    background-color: blueviolet;
 }
 
 .percent_bar_male {
