--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -464,7 +464,7 @@ a{
     text-align: center;
 }
 
-.plan_content {
+.plan_content, .friend_plan_content {
     width:95%;
     height:auto;
     margin:auto;
@@ -476,7 +476,7 @@ a{
     margin-bottom: 7px;
 }
 
-.selected_plan {
+.selected_plan, .selected_friend_plan {
     background:-webkit-gradient(linear,left top,left bottom,from(#805EBA),to(#390D86));
     color:white;
 }
