--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -409,11 +409,13 @@ a{
 
 /*---------- FRIENDS PLANS MODAL ----------- */
 .view_friends_plans{
-    color:navy;
-    font-weight:bold;
-    width:133px;
-    margin-right:auto;
-    margin-left:auto;
+    position: absolute;
+    left: 0px;
+    bottom: 0px;
+    border: 1px solid lightgray;
+    background: -webkit-gradient(linear,left top,left bottom,from(#AF64DE),to(purple));
+    padding: 5px;
+    color: white;
 }   
 
 #friends_plans_panel{
