--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -271,7 +271,7 @@ a{
     background:-webkit-gradient(linear,left top,left bottom,from(lightyellow),to(lightgray));
 }
 
-.seven_days {
+.days_panel .seven_days {
     height: 100%;
     width:100%;
     background-color:white;
