--- a/application/assets/css/login.css
+++ b/application/assets/css/login.css
@@ -354,3 +354,13 @@ h6 {
     top:-12px;
     text-align: center;
 }
+
+#footer {position: relative;
+	margin-top: -100px; /* negative value of footer height */
+	height: 100px;
+        background-color: black;
+        opacity: .4;
+	clear:both;
+} 
+
+    
