--- a/application/assets/css/login.css
+++ b/application/assets/css/login.css
@@ -355,12 +355,18 @@ h6 {
     text-align: center;
 }
 
-#footer {position: relative;
-	margin-top: -100px; /* negative value of footer height */
-	height: 100px;
-        background-color: black;
-        opacity: .4;
-	clear:both;
-} 
+#footer { /* This will make your footer stay where it is */
+       background: none repeat scroll 0 0 #1D1D1D;
+       border: 1px solid rgba(0, 0, 0, 0.3);
+       bottom: 0;
+       font-family: Arial, Helvetica, sans-serif;
+       height: 40px;
+       left: 50%;
+       margin: 0 auto 0 -490px;
+       padding: 0 10px;
+       position: fixed;
+       text-shadow: 1px 1px 1px #000000;
+       width: 960px;
+}
 
     
