--- a/application/assets/css/login.css
+++ b/application/assets/css/login.css
@@ -330,31 +330,40 @@ h6 {
 
 /* --------BOTTOM LINKS ---------*/
 
-.bottom_links{
-    width:1024px;
-    margin-left:auto;
-    margin-right:auto;
-    height:40px;
-    background-color: black;
-    opacity: .4;
-    text-align:left;
-    position:relative;      
+#stickey_footer { /* This will make your footer stay where it is */
+ background: none repeat scroll 0 0 #1D1D1D;
+ border: 1px solid rgba(0, 0, 0, 0.3);
+ bottom: 0;
+ font-family: Arial, Helvetica, sans-serif;
+ height: 40px;
+ left: 50%;
+ margin: 0 auto 0 -490px;
+ padding: 0 10px;
+ position: fixed;
+ text-shadow: 1px 1px 1px #000000;
+ width: 960px;
 }
 
-.bottom_link_inner {
-    position: relative;
-    top: 20px;
-}
 
-.bottom_link_outer{
-    height:100%;
-    width:86px;
-    display:inline-block;
-    position:relative;
-    top:-12px;
-    text-align: center;
+/* border curves */
+#stickey_footer {
+ -moz-border-radius: 10px 10px 0px 0px;
+ -webkit-border-radius: 10px 10px 0px 0px;
+ border-radius: 10px 10px 0px 0px;
 }
-
+ 
+/* hover effect */
+#stickey_footer:hover {
+ background: none repeat scroll 0 0 #2b2a2a;
+}
+ 
+/* shadow for the footer*/
+#stickey_footer {
+ -moz-box-shadow:0px 0px 11px #191919;
+ -webkit-box-shadow:0px 0px 11px #191919;
+ box-shadow:0px 0px 11px #191919;
+}
+ 
 #footer_menu {
  margin: 0;
  padding: 0;
@@ -369,25 +378,37 @@ h6 {
  border-right:1px solid rgba(0, 0, 0, 0.4);
  background: rgba(0, 0, 0, 0.1);
 }
-
-
-
-#footer { /* This will make your footer stay where it is */
-       background: none repeat scroll 0 0 #1D1D1D;
-       border: 1px solid rgba(0, 0, 0, 0.3);
-       bottom: 0;
-       font-family: Arial, Helvetica, sans-serif;
-       height: 40px;
-       left: 50%;
-       margin: 0 auto 0 -490px;
-       padding: 0 10px;
-       position: fixed;
-       text-shadow: 1px 1px 1px #000000;
-       width: 960px;
+ 
+#footer_menu .imgmenu {
+ padding:5px 8px 3px 14px;
+ float:left;
+ background:url("images/home.png") 13px 5px no-repeat;
+ width:36px;
+ height:30px;
+ border:none;
+ border-right:1px solid rgba(0, 0, 0, 0.4);
+ cursor:pointer;
 }
-
-/* hover effect */
-#footer:hover {
- background: none repeat scroll 0 0 #2b2a2a;
+ 
+#footer_menu li:hover {
+ background:#202020; /* Fallback color for old browsers */
+ background: rgba(0, 0, 0, 0.3);
 }
-    
+ 
+#footer_menu .imgmenu:hover {
+ background:url("images/home_hover.png") 13px 5px no-repeat;
+}
+ 
+#footer_menu li a {
+ display: block;
+ color: #cccccc;
+ text-decoration: none;
+}
+ 
+#footer_menu li a:hover {
+ color: #ffffff;
+}
+ 
+#footer_menu li span {
+ display:none;
+}
