Edited application/assets/css/login.css via GitHub

--- a/application/assets/css/login.css
+++ b/application/assets/css/login.css
@@ -369,3 +369,12 @@ h6 {
  color: #cccccc;
  text-decoration: none;
 }
+
+
+#footer {
+   position:absolute;
+   bottom:0;
+   width:100%;
+   height:60px;   /* Height of the footer */
+   background:#6cf;
+}
